--- a/frontEnd/src/index.css
+++ b/frontEnd/src/index.css
@@ -124,4 +124,44 @@ html::-webkit-scrollbar {
   }
 }
 
-/* truck */
+/* slider */
+.custom-slider {
+  position: relative;
+  width: 100%;
+  height: 0.1rem;
+}
+
+.custom-track {
+  background: #ceffde;
+  height: 0.2rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.custom-track.custom-track-1 {
+  background: #007d08;
+}
+
+.custom-thumb {
+  height: 1rem;
+  width: 1rem;
+  background-color: #fff;
+  border: 2px solid #008115;
+  border-radius: 50%;
+  cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.custom-thumb:focus {
+  outline: none;
+  border-color: #00591b;
+}
+
+.custom-thumb:hover {
+  background-color: #f3f4f6;
+}
+
+.custom-thumb:active {
+  background-color: #e5e7eb;
+}
